# physkit

./: .gitignore  LICENSE  LICENSE.md  README-pypi.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
physkit/: __init__.py  cli.py  config.py  constants.py  conversions.py  equations.py
src/physkit/: __init__.py  cli.py  constants.py  conversions.py  custom_units.py  plot_styler.py
tests/: test_constants.py  test_conversions.py  test_equations.py  test_readme_diff.py  test_unit_converter.py
