[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "physkit"
version = "0.1.0"
description = "A Python toolkit providing physical constants, unit conversions, and plotting styles"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name="sapphimars" }
]
maintainers = [
    { name="sapphimars" }
]
keywords = ["physics", "units", "pint", "plotting"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "pint>=0.24.4",
    "matplotlib>=3.10.0",
]

[project.scripts]
physkit = "physkit.cli:main"