[project]
name = "physkit"
description = "A Python toolkit providing physical constants, unit conversions, and plotting styles"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GNU General Public License v3 (GPLv3)" }
authors = [
    { name = "sapphimars" },
]
keywords = ["physics", "units", "pint", "plotting"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dependencies = [
    "pint>=0.24.4",
    "matplotlib>=3.10.0",
    "pdm-backend>=2.4.3",
]

version = "0.1.3"

[project.scripts]
physkit = "physkit.cli:main"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
packages = [{ include = "physkit", from = "src" }]
distribution = true

[project.urls]
"Homepage" = "https://github.com/sapphimars/physkit"
"Repository" = "https://github.com/sapphimars/physkit"
"Bug Tracker" = "https://github.com/sapphimars/physkit/issues"